infrastructure/authelia/external-name.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia-externalName
  namespace: authelia
spec:
  type: ExternalName
  externalName: authelia.home.legrandleo.fr
