infrastructure/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: authelia
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: authelia
  ports:
    - port: 9091
      targetPort: 9091
